modificaton du menu  burger et ajout de background sur la section about

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1,6 +1,9 @@
 @media (max-width: 1120px) {}
 
 @media (max-width: 992px) {
+  body{
+    max-width: 100%;
+  }
   .hero_area {
     min-height: auto;
   }
@@ -89,8 +92,12 @@
 
 @media (max-width: 576px) {
   .header_top a span {
-    display: none;
+    display: flex;
   }
+ .img-box img{
+     height:300px; 
+ }
+  
 
   .slider_section .detail-box h1 {
     font-size: 2.5rem;
