--- a/src/components/burger/burger.css
+++ b/src/components/burger/burger.css
@@ -54,25 +54,23 @@
   transform: rotate(-45deg)translate(11px ,-12px) ;
 }
 .menu {
-  position: absolute;
-  top: 80px;
-  right:-300px; 
-  width: 250px;
-  height: 20%;
+  position: relative; 
+  left:-350px;
+  width: 200px;
   background-color:transparent;
-  padding: 20px;
   transition: 0.4s;
   text-align: center;
   color: white;
 }
 
 .menu.open {
-  right: 0;
+  left:0;
 }
 
 .menu ul {
   list-style: none;
   padding: 0;
+  
 }
 
 .menu li {
@@ -85,44 +83,52 @@
   text-decoration: none;
   font-size: 18px;
   font-family: 'Montserrat Subrayada', sans-serif;
+
   
 }
 
 
   /* Pour les écrans de petite taille comme les téléphones et tablettes  */
-  @media (max-width: 1023px)and (max-width: 767px) {
+  @media (max-width: 1023px)and (max-width: 767px)  {
    nav ul li {
       text-align: center;
       display: block;
       position: relative;
-      margin-left: 100%;
+      left:250px;
       transform: translate(-50%, -50%); 
       background-color: #d27559;
       border-radius: 9999px;
+     
     
      
     }
     .burger{
       margin-left :50%;
-      margin-bottom:50px;
-      
+    
     }
-    .menu{
-     position: absolute;
-      right:-350px;
-      margin-top: 15px;
-      margin-bottom: 20px;
-      background-color: transparent;
    
-    }
   .menu a{
     color: white;
- 
-  
+    padding:10px;
   }
   
-  
+  /* For small screens like phones and tablets */
+@media (max-width: 467px) {
+  nav ul {
+    text-align: center;
+  }
+
+  .burger {
+    display: block;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    position: relative;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 15px;
+  }
+
 }
   
-  
-  
+}
