--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -4,10 +4,7 @@
   body{
     max-width: 100%;
   }
-  .hero_area {
-    min-height: auto;
-  }
-
+  
   .navbar-nav {
     align-items: center;
   }
@@ -91,14 +88,20 @@
 }
 
 @media (max-width: 576px) {
-  .header_top a span {
+ .header_top span a {
     display: flex;
+    justify-content: center;
+    justify-items: center;
+    
+  
   }
  .img-box img{
      height:300px; 
  }
-  
-
+.toyota{
+  height:250px;
+  width:400px;
+}
   .slider_section .detail-box h1 {
     font-size: 2.5rem;
     line-height: 55px;
