--- a/src/components/burger/burger.css
+++ b/src/components/burger/burger.css
@@ -94,7 +94,7 @@
       text-align: center;
       display: block;
       position: relative;
-      left:250px;
+      left:85%;
       transform: translate(-50%, -50%); 
       background-color: #d27559;
       border-radius: 9999px;
