ajout button revenir en haut dans le footer et d'un ptit parapgraphe

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -113,6 +113,9 @@
   .team_section .box .img-box img {
     height:50%;
   }
+  .button{
+    margin-left:30%;
+  }
 }
 
 @media (max-width: 480px) {}
