--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1,6 +1,6 @@
 @media (max-width: 1120px) {}
 
-@media (max-width: 992px) {
+@media (max-width: 995px) {
   body{
     max-width: 100%;
   }
@@ -15,6 +15,9 @@
 
   .sub_page .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item .nav-link {
     padding-bottom: 15px;
+  }
+  .footerbutton{
+    margin:0 auto;
   }
 }
 
@@ -85,6 +88,9 @@
   .info_section .info_form .social_box a {
     margin: 0 5px;
   }
+  .footerbutton{
+    margin:0 auto;
+  }
 }
 
 @media (max-width: 576px) {
@@ -120,7 +126,9 @@
   .info_section .info_form form button{
     margin-left:20%;
   }
-  
+  .footerbutton{
+    margin:0 auto;
+  }
 }
 
 @media (max-width: 480px) {}
